--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.7.4
+------
+added `--ignore-directory-count-limit` flag to ignore directory item count limit
+
 1.7
 ------
  - Add option to pass code item type
