--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.10.1
+-----
+- Add command for sending phishing emails from a directory to Intezer Analyze
+- Upgrade intezer-SDK to 1.19.9
+
 1.9.3
 -----
 - Improve commands results messages
