--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.10.2
+-----
+- Upgrade intezer-SDK to 1.19.10
+
 1.10.1
 -----
 - Add command for sending phishing emails from a directory to Intezer Analyze
