--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.12.0
+-----
+- Add command aliases with dashes (e.g., analyze-by-list) while maintaining backward compatibility with underscore versions
+
 1.11.2
 -----
 - Upgrade intezer-SDK to 1.21.4
