--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.13.0
+-----
+- Add command for notifying alerts by CSV
+- Drop support for Python 3.8
+- Add support for Python 3.13
+
 1.12.0
 -----
 - Add command aliases with dashes (e.g., analyze-by-list) while maintaining backward compatibility with underscore versions
